--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "hackku-2023",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~48.0.11",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
-    "typescript": "^4.9.4"
-  },
-  "private": true
+	"name": "hackku-2023",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"@tamagui/font-inter": "^1.15.0",
+		"@tamagui/shorthands": "^1.15.0",
+		"@tamagui/theme-base": "^1.15.0",
+		"@tamagui/themes": "^1.15.0",
+		"babel-plugin-transform-inline-environment-variables": "^0.4.4",
+		"expo": "~48.0.11",
+		"expo-linear-gradient": "~12.1.2",
+		"expo-status-bar": "~1.4.4",
+		"react": "18.2.0",
+		"react-native": "0.71.6",
+		"tamagui": "^1.15.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0",
+		"@types/react": "~18.0.14",
+		"typescript": "^4.9.4"
+	},
+	"private": true
 }
