--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@tamagui/animations-react-native": "^1.15.0",
+    "@tamagui/babel-plugin": "^1.15.0",
+    "@tamagui/config": "^1.15.0",
+    "@tamagui/font-inter": "^1.15.0",
+    "@tamagui/theme-base": "^1.15.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~48.0.11",
+    "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.6",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "^0.19.4",
+    "tamagui": "^1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
