--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@tamagui/babel-plugin": "^1.15.0",
     "@tamagui/config": "^1.15.0",
     "@tamagui/font-inter": "^1.15.0",
+    "@tamagui/lucide-icons": "^1.15.4",
     "@tamagui/theme-base": "^1.15.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~48.0.11",
     "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.6",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "^13.9.0",
     "react-native-web": "^0.19.4",
     "tamagui": "^1.15.0"
   },
