--- a/package.json
+++ b/package.json
@@ -3,34 +3,47 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@tamagui/animations-react-native": "^1.15.0",
-    "@tamagui/babel-plugin": "^1.15.0",
     "@tamagui/config": "^1.15.0",
     "@tamagui/font-inter": "^1.15.0",
+    "@tamagui/lucide-icons": "^1.15.2",
     "@tamagui/theme-base": "^1.15.0",
+    "amazon-cognito-identity-js": "^6.2.0",
+    "aws-sdk": "^2.1359.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "burnt": "^0.10.0",
     "expo": "~48.0.11",
+    "expo-document-picker": "~11.2.2",
+    "expo-file-system": "~15.2.2",
     "expo-font": "^11.1.1",
+    "expo-image-manipulator": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-fs": "^2.20.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "^13.4.0",
     "react-native-web": "^0.19.4",
-    "tamagui": "^1.15.0"
+    "tamagui": "^1.15.0",
+    "uuid": "^9.0.0"
+  },
+  "resolutions": {
+    "react-native-svg": "^13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tamagui/babel-plugin": "^1.15.0",
     "@types/react": "~18.0.14",
     "typescript": "^4.9.4"
   },
